# nbx-email-client

./: README.md  ideas.md  package-lock.json  package.json  pnpm-lock.yaml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/email/: CSVImport.tsx  RecipientInput.tsx  RichTextEditor.tsx
client/src/components/layout/: AppLayout.tsx
client/src/lib/: tauri-api.ts
client/src/pages/: Compose.tsx  HistoryPage.tsx  SettingsPage.tsx  TemplatesPage.tsx
client/src/store/: email-store.ts
client/src/types/: email.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
