[package]
name = "nbx-email-client"
version = "1.0.0"
description = "NBX Exchange Email Client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SMTP email sending
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
tokio = { version = "1", features = ["full"] }

# Secure credential storage
keyring = "2.3"

# UUID for email IDs
uuid = { version = "1.6", features = ["v4"] }

[features]
default = []
